tests/errors/scalar_conditional_requires_cast.dang
# Conditional result merging is pure: String! does not implicitly become ID!.
pub id = if (true) {
  "abc" :: ID!
} else {
  "def"
}
